--- a/mobile/package.json
+++ b/mobile/package.json
@@ -12,6 +12,8 @@
         "fix-styles": "prettier-stylelint --write 'source/**/*.{css,scss}' "
     },
     "dependencies": {
+        "babel-eslint": "^10.1.0",
+        "eslint-config-airbnb": "^18.2.1",
         "react": "16.13.1",
         "react-native": "0.63.4"
     },
@@ -20,7 +22,7 @@
         "@babel/runtime": "^7.13.8",
         "@react-native-community/eslint-config": "^2.0.0",
         "babel-jest": "^26.6.3",
-        "eslint": "^7.20.0",
+        "eslint": "^7.21.0",
         "jest": "^26.6.3",
         "metro-react-native-babel-preset": "^0.65.1",
         "prettier": "^2.2.1",
