--- a/mobile/package.json
+++ b/mobile/package.json
@@ -7,27 +7,29 @@
         "ios": "react-native run-ios",
         "start": "react-native start",
         "test": "jest",
-        "lint": "eslint *.js **/*.js src/**/*.js",
+        "lint": "eslint *.js **/*.js src/**/*.js --fix",
         "fix-code": "prettier-eslint --write 'source/**/*.{js,jsx}' ",
         "fix-styles": "prettier-stylelint --write 'source/**/*.{css,scss}' "
     },
     "dependencies": {
-        "babel-eslint": "^10.1.0",
-        "eslint-config-airbnb": "^18.2.1",
         "react": "16.13.1",
         "react-native": "0.63.4"
     },
     "devDependencies": {
         "@babel/core": "^7.13.8",
         "@babel/runtime": "^7.13.8",
-        "@react-native-community/eslint-config": "^2.0.0",
         "babel-jest": "^26.6.3",
-        "eslint": "^7.21.0",
         "jest": "^26.6.3",
         "metro-react-native-babel-preset": "^0.65.1",
         "prettier": "^2.2.1",
-        "prettier-eslint": "^12.0.0",
-        "prettier-eslint-cli": "^5.0.0",
+        "babel-eslint": "^10.1.0",
+        "eslint": "^7.12.1",
+        "eslint-config-airbnb": "^18.2.0",
+        "eslint-plugin-import": "^2.22.1",
+        "eslint-plugin-jsx-a11y": "^6.4.1",
+        "eslint-plugin-prettier": "^3.1.4",
+        "eslint-plugin-react": "^7.21.5",
+        "eslint-plugin-react-native": "^3.10.0",
         "prettier-stylelint": "^0.4.2",
         "react-test-renderer": "16.13.1"
     },
