--- a/mobile/.vscode/settings.json
+++ b/mobile/.vscode/settings.json
@@ -1,29 +1,24 @@
 {
     "editor.defaultFormatter": "esbenp.prettier-vscode",
     "[javascript]": {
-      "editor.defaultFormatter": "esbenp.prettier-vscode"
+        "editor.defaultFormatter": "esbenp.prettier-vscode"
     },
     "editor.codeActionsOnSave": {
-      "source.fixAll.eslint": true
+        "source.fixAll.eslint": true
     },
     "editor.formatOnSave": true,
     "prettier.semi": false,
     "javascript.format.semicolons": "remove",
     "javascript.format.enable": false,
     "eslint.options": {
-      "extensions": [
-        ".html",
-        ".js",
-        ".vue",
-        ".jsx"
-      ]
+        "extensions": [".html", ".js", ".vue", ".jsx"]
     },
     "eslint.validate": [
-      "javascript",
-      "javascriptreact",
-      "html",
-      "typescriptreact"
+        "javascript",
+        "javascriptreact",
+        "html",
+        "typescriptreact"
     ],
     "eslint.alwaysShowStatus": true,
     "files.eol": "\n"
-  }
+}
