--- a/mobile/package.json
+++ b/mobile/package.json
@@ -12,17 +12,23 @@
         "fix-styles": "prettier-stylelint --write 'source/**/*.{css,scss}' "
     },
     "dependencies": {
+        "@react-native-community/masked-view": "^0.1.10",
+        "@react-navigation/native": "^5.9.3",
+        "@react-navigation/stack": "^5.14.3",
         "react": "16.13.1",
-        "react-native": "0.63.4"
+        "react-native": "0.63.4",
+        "react-native-gesture-handler": "^1.10.3",
+        "react-native-paper": "^4.7.2",
+        "react-native-reanimated": "^1.13.2",
+        "react-native-safe-area-context": "^3.1.9",
+        "react-native-screens": "^2.18.1",
+        "react-native-vector-icons": "^8.1.0"
     },
     "devDependencies": {
         "@babel/core": "^7.13.8",
         "@babel/runtime": "^7.13.8",
-        "babel-jest": "^26.6.3",
-        "jest": "^26.6.3",
-        "metro-react-native-babel-preset": "^0.65.1",
-        "prettier": "^2.2.1",
         "babel-eslint": "^10.1.0",
+        "babel-jest": "^26.6.3",
         "eslint": "^7.12.1",
         "eslint-config-airbnb": "^18.2.0",
         "eslint-plugin-import": "^2.22.1",
@@ -30,6 +36,9 @@
         "eslint-plugin-prettier": "^3.1.4",
         "eslint-plugin-react": "^7.21.5",
         "eslint-plugin-react-native": "^3.10.0",
+        "jest": "^26.6.3",
+        "metro-react-native-babel-preset": "^0.65.1",
+        "prettier": "^2.2.1",
         "prettier-stylelint": "^0.4.2",
         "react-test-renderer": "16.13.1"
     },
