--- a/mobile/ios/Podfile
+++ b/mobile/ios/Podfile
@@ -10,6 +10,10 @@ target 'mobile' do
 
   pod 'RNVectorIcons', :path => '../node_modules/react-native-vector-icons'
 
+  pod 'RNGestureHandler', :path => '../node_modules/react-native-gesture-handler'
+
+  pod 'RNReanimated', :path => '../node_modules/react-native-reanimated'
+
   target 'mobileTests' do
     inherit! :complete
     # Pods for testing
